# plasma-playground

./: .gitignore  CLAUDE.md  NIGHT.md  NIGHT_LOG.md  README.md  REVIEW.md  REVIEW_LOG.md  conftest.py  environment.yml  gallery.py  gif_gallery.py  pyproject.toml  requirements-dev.txt  requirements.txt  tokamak_gallery.py  tokamak_t0_viz.py  tokamak_t1_viz.py  tokamak_t2_viz.py  tokamak_t3_viz.py  tokamak_t4_viz.py
assets/: README.md
docs/: 3D_TOKAMAK_GUIDE.md  A2_TWO_TEMPERATURE.md  A3_REAL_EQUILIBRIUM.md  A4_OPERATING_MODES.md  B1_CYLINDER_MHD.md  B2_REDUCED_MHD.md  B3_SAWTOOTH.md  C1_COUPLED_DISCHARGE.md  E1_STELLARATOR.md  FIDELITY.md  FUNDAMENTALS.md  G1_ANIMATION.md  T1_QPROFILE_POINCARE.md  T2_BANANA_ORBITS.md  T3_MAGNETIC_ISLANDS.md  T4_TEARING_MODE.md
plasmaplay/: __init__.py  animate.py  constants.py  cylinder_mhd.py  diagnostics.py  dispersion.py  equilibrium_metrics.py  fields.py  fvm.py  guiding_center.py  integrators.py  operating_limits.py  pic.py  plotting.py  propulsion.py  pushers.py  reduced_mhd.py  sawtooth.py  solvers.py  tearing.py  tokamak.py  transport.py
scripts/: _dump_frames.py  build_assets.py
tests/: README.md  test_animate.py  test_constants.py  test_cylinder_mhd.py  test_diagnostics.py  test_dispersion.py  test_equilibrium_metrics.py  test_experiments_smoke.py  test_fields.py  test_fvm.py  test_guiding_center.py  test_integrators.py  test_operating_limits.py  test_pic.py  test_pic_landau.py  test_pic_physics.py  test_propulsion.py  test_pushers.py  test_reduced_mhd.py  test_sawtooth.py  test_solvers.py  test_tearing.py  (+2 more)
(+30 files in other folders)
